# fraud-detection-qa-demo

./: .gitignore  README.md  config.py  launch_app.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
api/: data_store.py  main.py  requirements.txt
api/routes/: audit.py  fraud.py  quality.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  auth.ts  index.css  main.tsx  types.ts  vite-env.d.ts
dashboard/src/api/: client.ts
dashboard/src/components/: AuditTrail.tsx  AuthGate.tsx  ExportButton.tsx  Filters.tsx  Pagination.tsx
dashboard/src/pages/: FraudDetail.tsx  FraudOverview.tsx  QualityDetail.tsx  QualityOverview.tsx
glue/: enrichment_job.py  feature_engineering_job.py  ingestion_job.py
infra/: app.py  cdk.json  requirements.txt  stack.py
kiro/specs/fraud-detection-quality-analysis/: design.md  requirements.md  tasks.md
kiro/specs/unsupervised-anomaly-detection/: design.md  requirements.md  tasks.md
lambda/sku_lookup/: handler.py
pipeline/: results_loader.py  sagemaker_batch_transform.py  sagemaker_training.py
scripts/: generate_data.py
tests/: conftest.py
tests/unit/: test_api.py  test_feature_engineering.py  test_sagemaker_training.py
